--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@tabler/icons-react": "^3.11.0",
     "@tanstack/react-query": "^5.51.11",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "embla-carousel-autoplay": "^8.1.7",
     "embla-carousel-react": "^8.1.7",
     "init": "^0.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lazy-load-image-component": "^1.6.2",
+    "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.5",
     "shadcn-ui": "^0.8.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
